--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Student Information\n",
+    "Name:李碩元\n",
+    "\n",
+    "Student ID:110065537\n",
+    "\n",
+    "GitHub ID:renewrr\n",
+    "\n",
+    "Kaggle name:Silas Lee\n",
+    "\n",
+    "Kaggle private scoreboard snapshot:\n",
+    "\n",
+    "[Snapshot](snap.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
